# basicx

./: changes.md  library.txt  license.txt  readme.md
bmt/: changes.md
bmt/log_libs_test/: CMakeLists.txt  config.h.in  test_result.txt
bmt/log_libs_test/auxlib/: readme.md
bmt/log_libs_test/openex/: easylogging++.h  openex.cpp  syslog.cpp  syslog.h
rel/: BasicX.V0.1.0-Beta.Build.20180204.7z  BasicX.V0.2.0-Beta.Build.20180210.Windows.X64.7z  BasicX.V0.2.0-Beta.Build.20180210.Windows.X86.7z  BasicX.V0.3.0-Beta.Build.20180213.Windows.X64.Dll.7z  BasicX.V0.3.0-Beta.Build.20180213.Windows.X64.Lib.7z  BasicX.V0.3.0-Beta.Build.20180213.Windows.X86.Dll.7z  BasicX.V0.3.0-Beta.Build.20180213.Windows.X86.Lib.7z  BasicX.V0.4.0-Beta.Build.20180222.Windows.X64.Dll.7z  BasicX.V0.4.0-Beta.Build.20180222.Windows.X64.Lib.7z  BasicX.V0.4.0-Beta.Build.20180222.Windows.X86.Dll.7z  BasicX.V0.4.0-Beta.Build.20180222.Windows.X86.Lib.7z  BasicX.V0.5.0-Beta.Build.20180228.Windows.X64.MD.Dll.7z  BasicX.V0.5.0-Beta.Build.20180228.Windows.X86.MD.Dll.7z
sdk/: MariaDB.7z
src/: CMakeLists.txt  config.h.in
src/auxlib/x64/: libtcmalloc.lib
src/auxlib/x86/: libtcmalloc.lib
src/basicx/: basicx.cpp  basicx.h
src/common/: CMakeLists.txt  assist.h  common.cpp  common.h  compile.h  define.h  sysdef.h  tester.h  winver.h
src/common/JsonCpp/: json_value.cpp  json_writer.cpp
src/network/: CMakeLists.txt  asio_client.cpp  asio_client_.h  client.cpp  client.h  client_.h  server.cpp  server.h  server_.h  sock_client.cpp  sock_client_.h  struct.h  tester.h
src/plugins/: CMakeLists.txt  plugin_info.cpp  plugin_info.h  plugins.cpp  plugins.h  plugins_.h  tester.h
src/pluginx/: CMakeLists.txt
src/pluginx/plugin_test_1/: CMakeLists.txt  define.h  dllmain.cpp  plugin_test_1.cpp  plugin_test_1.h  plugin_test_1.xml  plugin_test_1_.h  plugin_test_1_P.h
src/pluginx/plugin_test_2/: CMakeLists.txt  define.h  dllmain.cpp  plugin_test_2.cpp  plugin_test_2.h  plugin_test_2.xml  plugin_test_2_.h  plugin_test_2_P.h
src/syscfg/: CMakeLists.txt  syscfg.cpp  syscfg_.h
src/sysdbi_m/: CMakeLists.txt  sysdbi_m.cpp  sysdbi_m.h  sysdbi_m_.h  tester.h
src/sysdbi_s/: CMakeLists.txt  sysdbi_s.cpp  sysdbi_s.h  sysdbi_s_.h  tester.h
src/syslog/: CMakeLists.txt  syslog.cpp  syslog.h  syslog_.h  tester.h
src/sysrtm/: CMakeLists.txt  sysrtm.cpp  sysrtm.h  sysrtm_.h
src/timers/: CMakeLists.txt  tester.h  timers.cpp  timers.h  timers_.h
