
# Copyright (c) 2017-2018 the BasicX authors
# All rights reserved.
#
# The project sponsor and lead author is Xu Rendong.
# E-mail: xrd@ustc.edu, QQ: 277195007, WeChat: ustc_xrd
# See the contributors file for names of other contributors.
#
# Commercial use of this code in source and binary forms is
# governed by a LGPL v3 license. You may get a copy from the
# root directory. Or else you should get a specific written 
# permission from the project author.
#
# Individual and educational use of this code in source and
# binary forms is governed by a 3-clause BSD license. You may
# get a copy from the root directory. Certainly welcome you
# to contribute code of all sorts.
#
# Be sure to retain the above copyright notice and conditions.

PROJECT (openex CXX)

CMAKE_MINIMUM_REQUIRED (VERSION 2.8)

SET_PROPERTY (GLOBAL PROPERTY USE_FOLDERS ON)

SET (OPEN_EX_VERSION_MAJOR 0)
SET (OPEN_EX_VERSION_MINOR 1)
SET (OPEN_EX_VERSION_PATCH 0)

# SET (CMAKE_C_COMPILER "D:/VS 2017/VC/bin/x86_amd64")
# SET (CMAKE_CXX_COMPILER "D:/VS 2017/VC/bin/x86_amd64")

INCLUDE (CheckCXXCompilerFlag)
CHECK_CXX_COMPILER_FLAG ("-std=c++11" COMPILER_SUPPORTS_CXX11)
CHECK_CXX_COMPILER_FLAG ("-std=c++0x" COMPILER_SUPPORTS_CXX0X)
IF (COMPILER_SUPPORTS_CXX11)
    IF (CMAKE_COMPILER_IS_GNUCXX)
        SET (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=gnu++11")
    ELSE ()
        SET (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
    ENDIF ()
ELSEIF (COMPILER_SUPPORTS_CXX0X)
    SET (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++0x")
ELSE ()
    # MSVC, ON by default, if available
ENDIF ()

MESSAGE (STATUS ${CMAKE_SYSTEM_NAME} " " ${CMAKE_SYSTEM_VERSION} " " ${CMAKE_SYSTEM_PROCESSOR})

SET (CMAKE_CONFIGURATION_TYPES "Debug;Release;" CACHE STRING "project type." FORCE) # Debug、Release、RelWithDebInfo、MinSizeRel
IF (WIN32)
    SET (CMAKE_INSTALL_PREFIX "C:/Users/xrd/Desktop/openex" CACHE PATH "install prefix." FORCE)
    SET (CMAKE_BOOST_ROOT "D:/SDK/Public/VS2017/Boost/1.65/x64" CACHE PATH "boost root." FORCE)
ELSEIF ((UNIX) OR (APPLE))
    SET (CMAKE_INSTALL_PREFIX "/usr/local/openex" CACHE PATH "install prefix." FORCE)
    SET (CMAKE_BOOST_ROOT "/usr/local/boost" CACHE PATH "boost root." FORCE)
ENDIF ()
SET (CMAKE_BOOST_VERSION "1.65.1" CACHE STRING "boost version." FORCE)
SET (BOOST_ROOT ${CMAKE_BOOST_ROOT})

IF (MSVC)
    # https://msdn.microsoft.com/en-us/library/fwkeyyhe.aspx
    SET (CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} /MDd") # /MDd、/MTd
	SET (CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} /Ob0") # /Ob0、Ob1、Ob2
	SET (CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} /Gm") # /Gm、/Gm-
	SET (CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} /D \"_DEBUG\"") #
    SET (CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} /MD") # /MD、/MT
	SET (CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} /O2") # /Od、/O1、/O2、/Ox
	SET (CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} /Ob2") # /Ob0、/Ob1、/Ob2
	SET (CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} /Oi") # /Oi
	SET (CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} /Ot") # /Os、/Ot
	SET (CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} /Oy-") # /Oy、/Oy-
	SET (CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} /GL") # /GL
	SET (CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} /Gy") # /Gy、/Gy-
    SET (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /Zc:wchar_t") # /Zc:wchar_t、/Zc:wchar_t-
    SET (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /W3") # /W0、/W1、/W2、/W3、/W4、/Wall
    SET (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /Zi") # /Z7、/Zi、/ZI
	SET (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /sdl") # /sdl、/sdl-
	SET (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /D \"_CONSOLE\" /D \"_LIB\" /D \"_UNICODE\" /D \"UNICODE\"") #
	# SET (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /Zc:wchar_t /W3")
	# SET_TARGET_PROPERTIES (${PROJECT_NAME} PROPERTIES COMPILE_FLAGS "/Zc:wchar_t /W3")
	# ADD_DEFINITIONS ("/Zc:wchar_t /W3")
	SET (CMAKE_EXE_LINKER_FLAGS_RELEASE "${CMAKE_EXE_LINKER_FLAGS_RELEASE} /OPT:REF")
	SET (CMAKE_EXE_LINKER_FLAGS_RELEASE "${CMAKE_EXE_LINKER_FLAGS_RELEASE} /OPT:ICF")
	SET (CMAKE_EXE_LINKER_FLAGS_RELEASE "${CMAKE_EXE_LINKER_FLAGS_RELEASE} /LTCG")
	SET (CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} /INCLUDE:\"__tcmalloc\"")
ELSE ()
	# TODO:
ENDIF ()

# SEND_ERROR、STATUS、FATAL_ERROR
MESSAGE (STATUS "project binary dir: " ${PROJECT_BINARY_DIR})
MESSAGE (STATUS "project source dir: " ${PROJECT_SOURCE_DIR})

CONFIGURE_FILE (
    "${PROJECT_SOURCE_DIR}/config.h.in"
	"${PROJECT_BINARY_DIR}/config.h"
    )

# SET (Boost_DEBUG 1)
SET (Boost_COMPILER "-vc141")
# SET (BOOST_ROOT "D:/SDK/Public/VS2017/Boost/1.65/x64") # 1
# SET (BOOST_INCLUDEDIR "D:/SDK/Public/VS2017/Boost/1.65/x64") # 1
# SET (BOOST_LIBRARYDIR "D:/SDK/Public/VS2017/Boost/1.65/x64/stage/lib") # 1
SET (Boost_USE_STATIC_LIBS ON) # 2
SET (Boost_USE_MULTITHREADED ON) # 2
SET (Boost_USE_STATIC_RUNTIME OFF) # 2
FIND_PACKAGE (Boost ${CMAKE_BOOST_VERSION} REQUIRED system random) # 3
MESSAGE (STATUS "boost include path: " ${Boost_INCLUDE_DIRS})
MESSAGE (STATUS "boost library path: " ${Boost_LIBRARY_DIRS})
INCLUDE_DIRECTORIES (${Boost_INCLUDE_DIRS})
LINK_DIRECTORIES (${Boost_LIBRARY_DIRS})

FILE (MAKE_DIRECTORY "${PROJECT_BINARY_DIR}/archive" "${PROJECT_BINARY_DIR}/library" "${PROJECT_BINARY_DIR}/runtime")
SET (CMAKE_ARCHIVE_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/archive")
SET (CMAKE_LIBRARY_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/library")
SET (CMAKE_RUNTIME_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/runtime")

FILE (COPY "${CMAKE_CURRENT_SOURCE_DIR}/auxlib/libtcmalloc.lib" DESTINATION ${PROJECT_BINARY_DIR})

FILE (GLOB OPEN_EX_HEADER_FILES "${PROJECT_SOURCE_DIR}/${PROJECT_NAME}/*.h")
FILE (GLOB OPEN_EX_SOURCE_FILES "${PROJECT_SOURCE_DIR}/${PROJECT_NAME}/*.cpp")
SOURCE_GROUP ("Header Files" FILES ${OPEN_EX_HEADER_FILES})
SOURCE_GROUP ("Source Files" FILES ${OPEN_EX_SOURCE_FILES})

LINK_DIRECTORIES ("${PROJECT_BINARY_DIR}/archive")

ADD_EXECUTABLE (${PROJECT_NAME} ${OPEN_EX_HEADER_FILES} ${OPEN_EX_SOURCE_FILES})

IF (WIN32)
    TARGET_LINK_LIBRARIES (${PROJECT_NAME} libtcmalloc.lib)
ELSEIF (UNIX)
    TARGET_LINK_LIBRARIES (${PROJECT_NAME} libtcmalloc.a)
ELSEIF (APPLE)
    TARGET_LINK_LIBRARIES (${PROJECT_NAME} libtcmalloc.a)
ENDIF ()

IF (WIN32)
    FILE (MAKE_DIRECTORY "${CMAKE_INSTALL_PREFIX}/bin")
	FILE (MAKE_DIRECTORY "${CMAKE_INSTALL_PREFIX}/doc")
	FILE (MAKE_DIRECTORY "${CMAKE_INSTALL_PREFIX}/etc")
	FILE (MAKE_DIRECTORY "${CMAKE_INSTALL_PREFIX}/lib")
    INSTALL (TARGETS ${PROJECT_NAME} DESTINATION "${CMAKE_INSTALL_PREFIX}/bin")
    INSTALL (
	    PROGRAMS "${PROJECT_SOURCE_DIR}/auxlib/libtcmalloc.dll" 
	    DESTINATION "${CMAKE_INSTALL_PREFIX}/bin"
	)
    INSTALL (
	    FILES "${PROJECT_SOURCE_DIR}/../changes.md" 
	          "${PROJECT_SOURCE_DIR}/../license.txt" 
	          "${PROJECT_SOURCE_DIR}/../readme.md" 
	    DESTINATION "${CMAKE_INSTALL_PREFIX}/doc"
	)
ELSEIF ((UNIX) OR (APPLE))
    FILE (MAKE_DIRECTORY "${CMAKE_INSTALL_PREFIX}/bin")
	FILE (MAKE_DIRECTORY "${CMAKE_INSTALL_PREFIX}/doc")
	FILE (MAKE_DIRECTORY "${CMAKE_INSTALL_PREFIX}/etc")
	FILE (MAKE_DIRECTORY "${CMAKE_INSTALL_PREFIX}/lib")
    INSTALL (TARGETS ${PROJECT_NAME} DESTINATION "${CMAKE_INSTALL_PREFIX}/bin")
    INSTALL (
	    PROGRAMS "${PROJECT_SOURCE_DIR}/auxlib/libtcmalloc.so" 
	    DESTINATION "${CMAKE_INSTALL_PREFIX}/lib" 
		# PERMISSIONS OWNER_EXECUTE GROUP_EXECUTE WORLD_EXECUTE # 755
	)
    INSTALL (
	    FILES "${PROJECT_SOURCE_DIR}/../changes.md" 
	          "${PROJECT_SOURCE_DIR}/../license.txt" 
	          "${PROJECT_SOURCE_DIR}/../readme.md" 
	    DESTINATION "${CMAKE_INSTALL_PREFIX}/doc" 
		# PERMISSIONS OWNER_WRITE OWNER_READ GROUP_READ WORLD_READ # 644
	)
ENDIF ()
